plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tourswitch'
version = 'v1'
description = 'tourswitch'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	//OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// JPA & QueryDSL
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// SpringDoc Openapi (Swagger)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// Lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// Configuration
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	// DB
	runtimeOnly 'com.mysql:mysql-connector-j'

	// junit
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'external-api'
	}
	systemProperty 'seoul-open-api.collection-enabled', 'false'
}

tasks.register('externalApiTest', Test) {
	group = 'verification'
	description = 'Runs tests that call external public APIs.'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'external-api'
	}
	systemProperty 'seoul-open-api.collection-enabled', 'false'
	shouldRunAfter test
}

tasks.named('processResources') {
	from('scripts/migrations/20260913_seoul_realtime_areas.sql') {
		into 'sql'
	}
}
